--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "author": "",
   "license": "Apache-2.0",
-  "dependencies": {
-    "express": "^4.17.1"
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.10.4",
+    "express": "^4.17.1",
+    "reload": "^3.1.0",
+    "typescript": "^4.0.2"
   }
 }
