--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.17.1",
     "reload": "^3.1.0",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "http-server": "^0.12.3"
   }
 }
