--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "webthing",
+  "name": "sheep-versus-clouds",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "run": "node server/server.js"
   },
   "author": "",
   "license": "Apache-2.0",
